Implement full GUI customization and Storage folder organization
- Enabled full layout editing (rows, items, slots, materials, lore) for all custom menus.
- Moved all player/game data to a dedicated 'Storage' folder.
- Removed Leaderboard module.
- Rebuilt magiocore.jar with all changes.

Co-authored-by: magio255 <193355205+magio255@users.noreply.github.com>